--- a/practice1/index.html
+++ b/practice1/index.html
@@ -6,10 +6,11 @@
     <title>Unity WebGL Player | unity_practice1</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" style="position: relative; width: 100%; height: 100%;"></canvas>
+      <div class="webgl"><canvas id="unity-canvas" width="960" height="600"></canvas></div>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
